# aws-landal

./: README.md  app.py  cdk.json  pyproject.toml
.github/workflows/: deploy.yml
cdk/: app.py  scheduled_lambda.py  stack.py
cdk/cdk.out/: LandalStats.assets.json  LandalStats.template.json  manifest.json  tree.json
cdk/cdk.out/asset.1a211d69a3ef780bd411e1db7a4611911fc4676ab5fbbe65a541b9a724b68e98/src/: main.py  writer.py
cdk/cdk.out/asset.6daada1319a8d9150824db2db30276e1e65cfe38c874d2c8d8e90a9cc90a3290/src/: main.py
image/: Dockerfile
image/src/: driver.py  main.py
